Add community list

--- a/app/templates/create_community.html
+++ b/app/templates/create_community.html
@@ -13,7 +13,7 @@
 
         <p>
             Description:<br/>
-            {{ form.desc(class="form-control") }}
+            {{ form.desc(size=80,class="form-control") }}
         </p>
 
         <p><input type="submit" class="btn btn-default" value="Create"></p>
