--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,3 +1,18 @@
 #content{
     margin-top: 100px;
 }
+
+.remove{color:black;}
+.remove:hover{color:red;}
+
+.ok{color:black;}
+.ok:hover{color:green;}
+
+#search{
+    width:200px;
+    display:inline;
+}
+
+#search_community{
+        float:right;
+}
