Add the possibility to create a share

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,6 +49,7 @@
                 </ul>
             </li>
 
+            <li {% if request.path==url_for('create_share') %}class="active"{% endif %}><a href="{{ url_for('create_share') }}">Create a Share</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             {% if g.user.is_authenticated() %}<li><a href="{{ url_for('logout') }}">Logout</a></li>
