--- a/app/templates/list_community.html
+++ b/app/templates/list_community.html
@@ -21,7 +21,7 @@
             <tr>
                 <td>{{ community.title }}</td>
                 <td>{{ community.desc }}</td>
-                <td>{{ community.owner.nickname }}</td>
+                <td>{{ community.owner.login }}</td>
 
                 {% if user.isMemberValidate(community) %}
                     <td><a class="remove" href="?leave={{ community.id }}"><span class="glyphicon glyphicon-log-out"></a></span></td>
