--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,15 +5,23 @@
 <h1>Sign In</h1>
 <form id="login" action="" method="post" name="login" class="form-horizontal">
     {{ form.hidden_tag() }}
-    <div class="form-group {% if form.login.errors %}has-error{% endif %}">
-        <label class="control-label col-sm-2" for="login">Login</label>
-        {% for error in form.login.errors %}
-          <label class="control-label" for="login">{{error}}</label>
+    <div class="form-group {% if form.email.errors %}has-error{% endif %}">
+        <label class="control-label col-sm-2" for="email">email</label>
+        {% for error in form.email.errors %}
+          <label class="control-label" for="email">{{error}}</label>
         {% endfor %}
 
         <div class="col-sm-10">
-            {{ form.login(size=80, class="form-control") }}
+            {{ form.email(size=80, class="form-control") }}
         </div>
+    </div>
+
+    <div class="radio">
+        {% for error in form.create.errors %}
+          <label class="control-label" for="create">{{error}}</label>
+        {% endfor %}
+
+        {{ form.create() }}
     </div>
 
     <div class="form-group {% if form.password.errors %}has-error{% endif %}">
