--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,6 +13,7 @@
                         <td>{{ share.people_in }} / {{ share.number_people }} people</td>
                         <td>${{ share.price_per_people }} / ${{ share.price_total }}</td>
                         <td>{{ share.community.title }}</td>
+                        <td><a href="{{ url_for('share', share_id=share.id) }}" class="btn btn-default btn-xlarge">Details</a></td>
                     </tr>
                 {% endfor %}
             {% endif %}
