Add share details page, and the possibility to add money via Paypal

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -18,5 +18,9 @@
 }
 
 #create_share, #login, #update_profile{
-    max-width:500px;
+    max-width:200px;
+}
+
+#money input[type="text"]{
+    width:50px;
 }
