--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -53,6 +53,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li {% if request.path==url_for('settings') %}class="active"{% endif %}><a href="{{ url_for('settings') }}">Settings</a></li>
+            <li {% if request.path==url_for('money') %}class="active"{% endif %}><a href="{{ url_for('money') }}">Money</a></li>
             {% if g.user.is_authenticated() %}<li><a href="{{ url_for('logout') }}">Logout</a></li>
             {% else %}<li {% if request.path==url_for('login') %}class="active"{% endif %}><a href="{{ url_for('login') }}">Login</a></li>{% endif %}
           </ul>
