--- a/app/templates/list_community.html
+++ b/app/templates/list_community.html
@@ -35,4 +35,11 @@
             </tr>
         {% endfor %}
     </table>
+
+    <script type="text/javascript">
+        $(".remove").click(function(){
+            if (!confirm('Are you sure you want to remove this community?'))
+                return false;
+        });
+    </script>
 {% endblock %}
