--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -69,5 +69,38 @@
 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="/static/js/bootstrap.min.js"></script>
+
+    {% if not notif == "" %}
+        <script type="text/javascript">
+            function notifyMe() {
+              // Let's check if the browser supports notifications
+              if (!("Notification" in window)) {
+                alert("This browser does not support desktop notification");
+              }
+
+              // Let's check if the user is okay to get some notification
+              else if (Notification.permission === "granted") {
+                // If it's okay let's create a notification
+                var notification = new Notification("{{ notif }}");
+              }
+
+              // Otherwise, we need to ask the user for permission
+              // Note, Chrome does not implement the permission static property
+              // So we have to check for NOT 'denied' instead of 'default'
+              else if (Notification.permission !== 'denied') {
+                Notification.requestPermission(function (permission) {
+                  // If the user is okay, let's create a notification
+                  if (permission === "granted") {
+                    var notification = new Notification("{{ notif }}");
+                  }
+                });
+              }
+            }
+
+            $(document).ready(function(){
+                notifyMe();
+            });
+        </script>
+    {% endif %}
   </body>
 </html>
