Remove useless alert for notification browser support

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -75,7 +75,7 @@
             function notifyMe() {
               // Let's check if the browser supports notifications
               if (!("Notification" in window)) {
-                alert("This browser does not support desktop notification");
+                console.log("This browser does not support desktop notification");
               }
 
               // Let's check if the user is okay to get some notification
