--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,6 +12,7 @@
 
     <!-- Bootstrap -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/datepicker3.css" rel="stylesheet">
     <link href="/static/css/style.css" rel="stylesheet">
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -69,6 +70,7 @@
 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/bootstrap-datepicker.js"></script>
 
     {% if not notif == "" %}
         <script type="text/javascript">
