--- a/app/templates/create_share.html
+++ b/app/templates/create_share.html
@@ -35,7 +35,7 @@
         {% endfor %}
 
         <div class="col-sm-10">
-            {{ form.date(class="form-control") }}
+            {{ form.date(class="form-control datepicker") }}
         </div>
     </div>
 
@@ -85,4 +85,12 @@
 
     <p><input type="submit" class="btn btn-default" value="Create"></p>
 </form>
+
+<script type="text/javascript">
+    $(document).ready(function(){
+        $(".datepicker").datepicker({
+            format: 'mm/dd/yyyy'
+        });
+    });
+</script>
 {% endblock %}
