--- a/app/templates/create_share.html
+++ b/app/templates/create_share.html
@@ -88,9 +88,7 @@
 
 <script type="text/javascript">
     $(document).ready(function(){
-        $(".datepicker").datepicker({
-            format: 'mm/dd/yyyy'
-        });
+        $(".datepicker").datetimepicker();
     });
 </script>
 {% endblock %}
