--- a/app/templates/create_share.html
+++ b/app/templates/create_share.html
@@ -46,7 +46,7 @@
         {% endfor %}
 
         <div class="col-sm-10">
-            {{ form.number_people(class="form-control") }}
+            {{ form.number_people(class="form-control", id="number_people") }}
         </div>
     </div>
 
@@ -56,8 +56,9 @@
             <label class="control-label col-sm-2" for="total_price">{{error}}</label>
         {% endfor %}
 
-        <div class="col-sm-10">
-            {{ form.total_price(class="form-control") }}
+        <div class="input-group col-sm-10">
+            <div class="input-group-addon">$</div>
+            {{ form.total_price(class="form-control", id="total_price") }}
         </div>
     </div>
 
@@ -67,8 +68,9 @@
             <label class="control-label col-sm-2" for="price_per_people">{{error}}</label>
         {% endfor %}
 
-        <div class="col-sm-10">
-            {{ form.price_per_people(class="form-control") }}
+        <div class="input-group col-sm-10">
+            <div class="input-group-addon">$</div>
+            {{ form.price_per_people(class="form-control", id="price_per_people") }}
         </div>
     </div>
 
