--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,6 +13,7 @@
     <!-- Bootstrap -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap-sortable.css" rel="stylesheet">
     <link href="/static/css/style.css" rel="stylesheet">
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -75,6 +76,7 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="/static/js/bootstrap.min.js"></script>
     <script src="/static/js/moment.js"></script>
+    <script src="/static/js/bootstrap-sortable.js"></script>
     <script src="/static/js/bootstrap-datetimepicker.min.js"></script>
 
     {% if not notif == "" %}
